App: Fix section page not showing tiles correctly

--- a/packages/app/src/app/admin/pages/section/section.component.scss
+++ b/packages/app/src/app/admin/pages/section/section.component.scss
@@ -40,7 +40,9 @@
   }
   &__items {
     &__title {
-
+    }
+    &__card {
+      margin-bottom: 8px;
     }
     &__panel {
       border-radius: $card-border-radius;
